Fix issue where news was too wide on mobile

--- a/src/interface/layout/Panel.scss
+++ b/src/interface/layout/Panel.scss
@@ -56,6 +56,9 @@
       //  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
       //}
     }
+    img {
+      max-width: 100%;
+    }
   }
   .panel-body.pad:last-of-type > ul {
     margin-bottom: 30px;
